--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Clean up stubs
         run:  rm -rf _cases/3000 _cves/CVE-3000-*
       - name: Build
-        run:  MAKE="make -j4" bundle install --jobs=4 && bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+        run:  bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
       - name: install prerequisites
         run:  pip3 install html5validator && gem install --no-document html-proofer
       - name: Test HTML code
