--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -28,6 +28,8 @@ jobs:
         run:  rm -rf _cases/3000 _cves/CVE-3000-*
       - name: Build
         run:  MAKE="make -j4" bundle install --jobs=4 && bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+      - name: "Fix security.txt"
+        run: mkdir _site/.well-known && (cd _site/.well-known && ln -s ../security.txt) && ls -al _site/.well-known
       - name: install prerequisites
         run:  pip3 install html5validator && gem install --no-document html-proofer
       - name: Test HTML code
