--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,4 @@ Header set X-XSS-Protection "1; mode=block"
 Header set Content-Security-Policy "default-src 'none'; font-src 'self'; img-src 'self'; script-src 'self' ; style-src 'self'"
 Header always set Referrer-Policy "same-origin"
 ErrorDocument 404 /404.html
+RewriteRule ^divd-(.*)$ /DIVD-$1 [R=301,L]
