--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,16 @@ defaults:
     scope:
       path: "" # an empty string here means all files in the project
     values:
-      layout: "default"    
+      layout: "default"  
+
+compress_html:
+  clippings: all
+  comments: [""]
+  endings: [html, head, body, li, dt, dd, rt, rp, optgroup, option, colgroup, caption, thead, tbody, tfoot, tr, td, th]
+  profile: false
+  blanklines: false
+  ignore:
+    envs: []  
 
 
 exclude:
