--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains
 Header always append X-Frame-Options DENY
 Header set X-Content-Type-Options nosniff
 Header set X-XSS-Protection "1; mode=block"
-Header set Content-Security-Policy "default-src 'none'; font-src 'self'; img-src 'self'; script-src 'self' ; style-src 'self'"
+Header set Content-Security-Policy "default-src 'none'; font-src 'self'; img-src 'self'; script-src http://gc.zgo.at/count.js 'self'; style-src 'self'; connect-src https://divd-csirt.goatcounter.com/count 'self'"
 Header always set Referrer-Policy "same-origin"
 ErrorDocument 404 /404.html
 RewriteRule ^divd-(.*)$ /DIVD-$1 [R=301,L]
