--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Update external content
         run:  ./update.sh
       - name: Clean up stubs
-        run:  rm -rf _cases/3000 _cves/CVE-3000-*
+        run:  rm -rf _cases/3000 _data/cves/3000
       - name: Build
         run:  bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
       - name: "Fix security.txt"
