Final updates to the case

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,8 @@
   link: /cves/
 - name: CNA
   link: /cna/
+- name: Stolen credentials
+  link: /credentials/
 - name: Blog
   link: /blog/
 - name: Donate
