--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with: 
-          fetch-depth: 0
+          fetch-depth : 0
+          lfs         : true
       - name: Install ruby
         uses: ruby/setup-ruby@v1
         with:
