--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -35,7 +35,12 @@ jobs:
       - name: Clean up stubs
         run:  rm -rf _cases/3000 _data/cves/3000
       - name: Build
-        run:  bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+        run:  |
+          bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+          if [[ $(grep "ERROR" jekyll-build.log | wc -l) -gt 0 ]] ; then
+            echo "*** There are Jekyll build errors ***"
+            exit 1
+          fi
       - name: "Fix security.txt"
         run: mkdir _site/.well-known && (cd _site/.well-known && ln -s ../security.txt) && ls -al _site/.well-known
       - name: Test HTML code
