Replace HTML scraping with JSON API for team data
Replace the HTML scraping implementation with a cleaner JSON API approach
using https://www.divd.nl/documents/people.json for team member data.

Improvements:
- Use official JSON API instead of brittle HTML scraping
- Remove BeautifulSoup dependency (no longer needed)
- Get 64 people instead of 55 (more complete dataset)
- Reduce missing people from 32 to 28 (better coverage)
- Include rich profile data: social links, about sections, profile pictures
- Better Unicode handling with proper character names
- More reliable and maintainable data source

Results:
- 64 team members with full profile data
- 10 teams from JSON team associations
- Includes previously missing people like Victor Gevers
- Social media links now included in markdown files
- Personal descriptions/bios included from JSON data

--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -27,9 +27,9 @@ jobs:
         with:
           python-version: '3.13.0'
       - name: install prerequisites
-        run:  pip3 install html5validator requests beautifulsoup4 && gem install --no-document html-proofer
+        run:  pip3 install html5validator requests && gem install --no-document html-proofer
       - name: install prerequisites
-        run:  pip3 install requests beautifulsoup4 
+        run:  pip3 install requests 
       - name: Update external content
         run:  ./update.sh
       - name: Clean up stubs
